SecurityGroups.json
{
	"AWSTemplateFormatVersion": "2010-09-09",
	"Description": "This template creates 3 security groups: two for AD communication with other DCs on prem (had to create two to work around the 50 rule limit), and one for AD communication with domain members on AWS.",
	"Parameters": {
		"VPCID": {
			"Description": "ID of the VPC in which we're creating the security groups",
			"Type": "AWS::EC2::VPC::Id"
		},


	

		"DomainMembersOnAWS": {
			"AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
			"ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
			"Default": "172.22.0.0/16",
			"Description": "CIDR block for all of the allotted AWS subnets, where a domain member could reside.",
			"Type": "String"
		},
		"OnPremDCsCIDR1": {
			"AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
			"ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
			"Default": "172.26.16.0/24",
			"Description": "CIDR block for on-prem domain controllers.",
			"Type": "String"
		},

		"OnPremDCsCIDR2": {
			"AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
			"ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
			"Default": "10.1.4.0/23",
			"Description": "Other CIDR block for on-prem domain controllers.",
			"Type": "String"
		}
	},
	"Resources": {
		"DomainControllersDC2DC": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"GroupDescription": "Allows communication from other domain controllers on-prem in the 172.26.16.0/24 block",
				"VpcId": {
					"Ref": "VPCID"
				},
				"SecurityGroupIngress": [

					{
						"IpProtocol": "udp",
						"FromPort": "123",
						"ToPort": "123",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR1"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "135",
						"ToPort": "135",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR1"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "9389",
						"ToPort": "9389",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR1"
						}
					},
					{
						"IpProtocol": "udp",
						"FromPort": "138",
						"ToPort": "138",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR1"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "445",
						"ToPort": "445",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR1"
						}
					},
					{
						"IpProtocol": "udp",
						"FromPort": "445",
						"ToPort": "445",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR1"
						}
					},
					{
						"IpProtocol": "udp",
						"FromPort": "464",
						"ToPort": "464",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR1"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "464",
						"ToPort": "464",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR1"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "49152",
						"ToPort": "65535",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR1"
						}
					},
					{
						"IpProtocol": "udp",
						"FromPort": "49152",
						"ToPort": "65535",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR1"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "389",
						"ToPort": "389",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR1"
						}
					},
					{
						"IpProtocol": "udp",
						"FromPort": "389",
						"ToPort": "389",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR1"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "636",
						"ToPort": "636",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR1"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "3268",
						"ToPort": "3268",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR1"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "3269",
						"ToPort": "3269",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR1"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "9389",
						"ToPort": "9389",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR1"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "88",
						"ToPort": "88",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR1"
						}
					},
					{
						"IpProtocol": "udp",
						"FromPort": "88",
						"ToPort": "88",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR1"
						}
					},
					{
						"IpProtocol": "udp",
						"FromPort": "5355",
						"ToPort": "5355",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR1"
						}
					},
					{
						"IpProtocol": "udp",
						"FromPort": "137",
						"ToPort": "137",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR1"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "139",
						"ToPort": "139",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR1"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "5722",
						"ToPort": "5722",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR1"
						}
					}

				]
			}
		},
		"DomainControllersDC2DCBis": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"GroupDescription": "Allows communication from other domain controllers on-prem in the 10.1.4.0/23 block",
				"VpcId": {
					"Ref": "VPCID"
				},
				"SecurityGroupIngress": [

					{
						"IpProtocol": "udp",
						"FromPort": "123",
						"ToPort": "123",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR2"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "135",
						"ToPort": "135",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR2"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "9389",
						"ToPort": "9389",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR2"
						}
					},
					{
						"IpProtocol": "udp",
						"FromPort": "138",
						"ToPort": "138",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR2"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "445",
						"ToPort": "445",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR2"
						}
					},
					{
						"IpProtocol": "udp",
						"FromPort": "445",
						"ToPort": "445",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR2"
						}
					},
					{
						"IpProtocol": "udp",
						"FromPort": "464",
						"ToPort": "464",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR2"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "464",
						"ToPort": "464",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR2"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "49152",
						"ToPort": "65535",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR2"
						}
					},
					{
						"IpProtocol": "udp",
						"FromPort": "49152",
						"ToPort": "65535",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR2"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "389",
						"ToPort": "389",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR2"
						}
					},
					{
						"IpProtocol": "udp",
						"FromPort": "389",
						"ToPort": "389",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR2"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "636",
						"ToPort": "636",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR2"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "3268",
						"ToPort": "3268",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR2"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "3269",
						"ToPort": "3269",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR2"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "9389",
						"ToPort": "9389",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR2"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "88",
						"ToPort": "88",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR2"
						}
					},
					{
						"IpProtocol": "udp",
						"FromPort": "88",
						"ToPort": "88",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR2"
						}
					},
					{
						"IpProtocol": "udp",
						"FromPort": "5355",
						"ToPort": "5355",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR2"
						}
					},
					{
						"IpProtocol": "udp",
						"FromPort": "137",
						"ToPort": "137",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR2"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "139",
						"ToPort": "139",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR2"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "5722",
						"ToPort": "5722",
						"CidrIp": {
							"Ref": "OnPremDCsCIDR2"
						}
					}


				]
			}
		},
		"DomainControllersMembers2DC": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"GroupDescription": "Allows communication from domain members in the AWS CIDR block",
				"VpcId": {
					"Ref": "VPCID"
				},
				"SecurityGroupIngress": [{
						"IpProtocol": "tcp",
						"FromPort": "5985",
						"ToPort": "5985",
						"CidrIp": {
							"Ref": "DomainMembersOnAWS"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "53",
						"ToPort": "53",
						"CidrIp": {
							"Ref": "DomainMembersOnAWS"
						}
					},
					{
						"IpProtocol": "udp",
						"FromPort": "53",
						"ToPort": "53",
						"CidrIp": {
							"Ref": "DomainMembersOnAWS"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "49152",
						"ToPort": "65535",
						"CidrIp": {
							"Ref": "DomainMembersOnAWS"
						}
					},
					{
						"IpProtocol": "udp",
						"FromPort": "49152",
						"ToPort": "65535",
						"CidrIp": {
							"Ref": "DomainMembersOnAWS"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "5985",
						"ToPort": "5985",
						"CidrIp": {
							"Ref": "DomainMembersOnAWS"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "53",
						"ToPort": "53",
						"CidrIp": {
							"Ref": "DomainMembersOnAWS"
						}
					},
					{
						"IpProtocol": "udp",
						"FromPort": "53",
						"ToPort": "53",
						"CidrIp": {
							"Ref": "DomainMembersOnAWS"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "49152",
						"ToPort": "65535",
						"CidrIp": {
							"Ref": "DomainMembersOnAWS"
						}
					},
					{
						"IpProtocol": "udp",
						"FromPort": "49152",
						"ToPort": "65535",
						"CidrIp": {
							"Ref": "DomainMembersOnAWS"
						}
					},

					{
						"IpProtocol": "udp",
						"FromPort": "123",
						"ToPort": "123",
						"CidrIp": {
							"Ref": "DomainMembersOnAWS"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "135",
						"ToPort": "135",
						"CidrIp": {
							"Ref": "DomainMembersOnAWS"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "9389",
						"ToPort": "9389",
						"CidrIp": {
							"Ref": "DomainMembersOnAWS"
						}
					},
					{
						"IpProtocol": "udp",
						"FromPort": "138",
						"ToPort": "138",
						"CidrIp": {
							"Ref": "DomainMembersOnAWS"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "445",
						"ToPort": "445",
						"CidrIp": {
							"Ref": "DomainMembersOnAWS"
						}
					},
					{
						"IpProtocol": "udp",
						"FromPort": "445",
						"ToPort": "445",
						"CidrIp": {
							"Ref": "DomainMembersOnAWS"
						}
					},
					{
						"IpProtocol": "udp",
						"FromPort": "464",
						"ToPort": "464",
						"CidrIp": {
							"Ref": "DomainMembersOnAWS"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "464",
						"ToPort": "464",
						"CidrIp": {
							"Ref": "DomainMembersOnAWS"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "49152",
						"ToPort": "65535",
						"CidrIp": {
							"Ref": "DomainMembersOnAWS"
						}
					},
					{
						"IpProtocol": "udp",
						"FromPort": "49152",
						"ToPort": "65535",
						"CidrIp": {
							"Ref": "DomainMembersOnAWS"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "389",
						"ToPort": "389",
						"CidrIp": {
							"Ref": "DomainMembersOnAWS"
						}
					},
					{
						"IpProtocol": "udp",
						"FromPort": "389",
						"ToPort": "389",
						"CidrIp": {
							"Ref": "DomainMembersOnAWS"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "636",
						"ToPort": "636",
						"CidrIp": {
							"Ref": "DomainMembersOnAWS"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "3268",
						"ToPort": "3268",
						"CidrIp": {
							"Ref": "DomainMembersOnAWS"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "3269",
						"ToPort": "3269",
						"CidrIp": {
							"Ref": "DomainMembersOnAWS"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "88",
						"ToPort": "88",
						"CidrIp": {
							"Ref": "DomainMembersOnAWS"
						}
					},
					{
						"IpProtocol": "udp",
						"FromPort": "88",
						"ToPort": "88",
						"CidrIp": {
							"Ref": "DomainMembersOnAWS"
						}
					}
				]
			}
		}
	}
}
